--- a/deforestation/index.html
+++ b/deforestation/index.html
@@ -25,7 +25,7 @@
         </head>        
     <body>
         <h1>The Rise of Deforestation Is Rooted in Place and Population</h1>
-        <p id = "subtitle"> By Elizabeth Duchan - May 2, 2024 </p>
+        <p id = "subtitle" style="color: #49443E;"> By Elizabeth Duchan - May 2, 2024 </p>
         <div class ="divider"></div>
         <p> Global deforestation is on the rise. Since 1990, we’ve lost a staggering <a href= "https://www.ipcc.ch/report/ar6/wg2/chapter/ccp7/#:~:text=More%20than%20420%20million%20ha,areas%20(FAO%2C%202020)." style="color: #628240;"> 420 million hectares</a> of forest due to agriculture, mining, and urban development, the equivalent of <a href = "https://www.worldwildlife.org/stories/what-is-forest-degradation-and-why-is-it-bad-for-people-and-wildlife" style="color: #628240;">27 soccer fields</a> 27 soccer fields vanishing every minute. Although a jarring fact, this rapid depletion might not come as a surprise; the world has been bearing its negative effects on biodiversity, flooding, greenhouse gas emissions, and global warming for centuries. </p>
         <p>The resonating impacts of deforestation are well documented, but more complex questions loom: what are the factors informing its growing prevalence, and where should we be focusing our attention? And perhaps most importantly, how can we use this knowledge to enact change? </p>
