--- a/deforestation/index.html
+++ b/deforestation/index.html
@@ -46,8 +46,7 @@
         <p>𖠰 <a href="https://greentumble.com/15-strategies-to-reduce-deforestation" style="color: #628240;">Fifteen Strategies How to Reduce and Prevent Deforestation</a></p>   
         <h2>Data Sources</h2>
         <p>The main data source used for this project was a dataset from the Food and Agriculture Organization of the United Nations, 
-            entitled <a href= https://www.kaggle.com/datasets/kanchana1990/global-forest-insights-1990-2020-fao style="color: #628240;">“Global Forest Insights 1990-2020.” </a> Country-level population data came from Wordometers, titled
-            <a href= "https://www.worldometers.info/world-population/population-by-country/" style="color: #628240;">“Countries in the World by Population.”</a>
+            entitled <a href= https://www.kaggle.com/datasets/kanchana1990/global-forest-insights-1990-2020-fao style="color: #628240;">“Global Forest Insights 1990-2020.” </a> Country-level population data came from Wordometers, titled <a href= "https://www.worldometers.info/world-population/population-by-country/" style="color: #628240;">“Countries in the World by Population.”</a>
             Lastly, global map data came from opendatasoft’s <a href = "https://public.opendatasoft.com/explore/dataset/world-administrative-boundaries/export/?flg=en-us" style="color: #628240;"> “World Administrative Boundaries - Countries and Territories.” </a></p>
         <div id = "myTooltip">_</div>
         <div id = "myChart"></div>
