--- a/deforestation/index.html
+++ b/deforestation/index.html
@@ -5,18 +5,18 @@
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
         <link href="https://fonts.googleapis.com/css2?family=Arapey:ital@0;1&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Maitree:wght@200;300;400;500;600;700&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
         <link href="https://fonts.googleapis.com/css2?family=Arapey:ital@0;1&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Maitree:wght@200;300;400;500;600;700&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Sedan:ital@0;1&display=swap" rel="stylesheet">
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <img id="First" src = "images/firstgraph.gif"> 
@@ -48,7 +48,7 @@
         <p>The main data source used for this project was a dataset from the Food and Agriculture Organization of the United Nations, 
             entitled <a href= https://www.kaggle.com/datasets/kanchana1990/global-forest-insights-1990-2020-fao style="color: #628240;">“Global Forest Insights 1990-2020.” </a> Country-level population data came from Wordometers, titled <a href= "https://www.worldometers.info/world-population/population-by-country/" style="color: #628240;">“Countries in the World by Population.”</a>
             Lastly, global map data came from opendatasoft’s <a href = "https://public.opendatasoft.com/explore/dataset/world-administrative-boundaries/export/?flg=en-us" style="color: #628240;"> “World Administrative Boundaries - Countries and Territories.” </a></p>
-        <div id = "myTooltip">_</div>
-        <div id = "myChart"></div>
+        <!-- <div id = "myTooltip">_</div> -->
+        <!-- <div id = "myChart"></div> -->
     </body>
 </html>
